# langchainproject-new-langchainproject_3

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
data/: sample.txt
new_src/: agent_manager.py  agent_state.py  baseline_code.py  edge.py  graph_builder.py  llm.py  main.py  make_graph.py  node.py  prompts.py  rag_build.py  slack.py  test_multiturn.py  tools.py  upload_helpers.py
new_src/web/: main.py  schemas.py  streamlit_app.py
old_src/: llm.py  main.py  node.py  tools.py
script/: start_services.sh  stop_services.sh
src/: agent_manager.py  edge.py  graph_builder.py  llm.py  main.py  make_graph.py  prompts.py  tools.py  upload_helpers.py
src/data/: data_processing.py  embedding_model.py
src/rag/: vector_db_manager.py
src/util/: util.py
src/utils/: utils.py
src/web/: main.py  streamlit_app.py
src/web/.streamlit/: config.toml
